--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "immutable-stringify",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Serialize and unserialize immutable list | map | record. ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:buhichan/immutable-stringify.git"
   },
   "keywords": [
     "immutable",
@@ -12,7 +16,7 @@
     "json"
   ],
   "dependencies": {
-    "immutable": "^3.8.1"
+    "immutable": "4.*||^4.0.0-rc.2"
   },
   "author": "buhi",
   "license": "MIT"
